# adaptive-inference-runtime

./: .gitignore  AGENTS.md  CLAUDE.md  CLOSE_ISSUES_INSTRUCTIONS.md  CONTRIBUTING.md  GEMINI.md  HOW_TO_CREATE_ISSUES.md  ISSUES.md  ISSUES_TO_CREATE.md  ISSUE_CLOSURE_ANALYSIS.md  LICENSE  README.md  README_ISSUES.md  ROADMAP.md  SUMMARY.md  create_labels.sh  create_parallel_issues.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: ISSUES_TO_CREATE.md  create_issues_with_gh.sh  pull_request_template.md
.github/ISSUE_TEMPLATE/: feature_request.md  task.md
.github/TEMPLATES/: bug_report.md
.github/workflows/: ci.yml
air/: __init__.py  cli.py  state.py  types.py
air/adapters/: __init__.py  base.py  huggingface.py  llama_cpp.py  vllm.py
air/compression/: __init__.py  cache_impl.py  compressor.py  h2o.py  heavy_hitter.py  pooling.py  quantized.py  safety.py  sliding_window.py
air/interfaces/: __init__.py  adapter.py  compressor.py  router.py
air/routing/: __init__.py  confidence.py  logprob_slope.py  router.py
air/routing/confidence/: README.md  __init__.py  attention_instability.py  token_entropy.py  topk_disagreement.py
air/speculation/: __init__.py  decoder.py  draft.py  verifier.py
air/utils/: __init__.py  logging.py
benchmarks/: __init__.py
configs/: default.yaml
docs/: architecture.md  concepts.md  getting-started.md
examples/: __init__.py  attention_instability_example.py  routing_demo.py  sliding_window_compression.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py
tests/unit/: __init__.py  test_compression_safety.py  test_confidence_scorers.py  test_h2o_compressor.py  test_heavy_hitter.py  test_huggingface_adapter.py  test_llama_cpp_adapter.py  test_logging.py  test_sliding_window_compressor.py  test_vllm_adapter.py
tests/unit/routing/: test_attention_instability.py  test_logprob_slope.py  test_topk_disagreement.py
tests/unit/speculation/: test_draft_model.py
